--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>test1212312311212</title>
 </head>
 <body>
     하자
     싫어
+    엔진 갖고와
 </body>
 </html>
