--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>test1212312311212</title>
+<script src="./jquery1.12.js"></script>
 </head>
+<script>
+    $(function(){
+        $("#btn").click(function(){
+            alert("test");
+        });
+    });
+</script>
 <body>
     하자
     싫어
     엔진 갖고와
     ㅇㄴㄹㄴㅇㄹㄴㅇㄹㄴㅇㄹ
+    <button type="button" id="btn">버튼</button>
 </body>
 </html>
