--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>test1212312311212</title>
-<script src="./jquery1.12.js"></script>
+<script src="./jquery.js"></script>
+<script src="./vue.js"></script>
 </head>
 <script>
     $(function(){
