--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>shop</title>
+<link rel="stylesheet" type="text/css" href="top.css">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
+
 </head>
 <body>
     <!-- 탑배너 -->
     <section class="topbanner" id="topbanner">
         <?php include "topbanner.html"; ?>    
-         </section>
+    </section>
     
         <!-- 최상단 메뉴부분 -->
         <header class="top clear">
