--- a/topbanner.html
+++ b/topbanner.html
@@ -1,8 +1,8 @@
 <meta charset="UTF-8">
-<div>
+<div class="topbanner_div">
     <ul>
-        <li></li>
-        <li></li>
+        <li><img src="./image/topbanner1.jpg"></li>
+        <li><img src="./image/topbanner2.jpg"></li>
         <li></li>
     </ul>
 </div>
