--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>shop</title>
-<link rel="stylesheet" type="text/css" href="./top.css?v=<? echo $v; ?>">
+<link rel="stylesheet" type="text/css" href="./top.css?v=5">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
 
