--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>shop</title>
 <link rel="stylesheet" type="text/css" href="./top.css">
-<link rel="stylesheet" type="text/css" href="./bestproduct.css">
+<link rel="stylesheet" type="text/css" href="./bestproduct.css?v=<? echo $v; ?>">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
 <link rel="stylesheet" type="text/css" href="./top.css?v=<? echo $v; ?>">
 <script src="./jquery.js"></script>
