--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <!-- 탑배너 -->
     <section class="topbanner" id="topbanner">
         <?php include "topbanner.html"; ?>    
+        <div class="topbanner_div">
+            <ul>
+                <li><img src="./image/topbanner1.jpg"></li>
+                <li><img src="./image/topbanner2.jpg"></li>
+                <li></li>
+            </ul>
+        </div>
     </section>
     
         <!-- 최상단 메뉴부분 -->
