--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <title>shop</title>
 <link rel="stylesheet" type="text/css" href="./top.css">
 <link rel="stylesheet" type="text/css" href="./bestproduct.css?v=<? echo $v; ?>">
+<link rel="stylesheet" type="text/css" href="./bestproduct.css">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
 <link rel="stylesheet" type="text/css" href="./top.css?v=<? echo $v; ?>">
 <script src="./jquery.js"></script>
