--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?
-    $v=date("YmdHis");
-?>
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -10,7 +7,7 @@
 <title>shop</title>
 <link rel="stylesheet" type="text/css" href="./bestproduct.css">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
-<link rel="stylesheet" type="text/css" href="./top.css?v=<? echo $v; ?>">
+<link rel="stylesheet" type="text/css" href="./top.css?v=10">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
 
