--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>shop</title>
 <link rel="stylesheet" type="text/css" href="./bestproduct.css?v=3">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
-<link rel="stylesheet" type="text/css" href="./top.css?v=15">
+<link rel="stylesheet" type="text/css" href="./top.css?v=17">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
 
@@ -19,7 +19,7 @@
             <ul>
                 <li><img src="./image/topbanner1.jpg"></li>
                 <li><img src="./image/topbanner2.jpg"></li>
-                <li></li>
+                <li><span class="topbanner_closebtn">X</span></li>
             </ul>
         </div>
     </section>
