--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
         <!-- 배너 -->
         <section class="banner clear">
-        <?php include "banner.html"; ?>
+        <iframe src="banner.html" width="100%" height="65" frameborder="0" scrolling="no"></iframe>
         </section>
     
         <!-- 상품리스트 -->
