--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
         <!-- 최상단 메뉴부분 -->
         <header class="top clear">
-        <?php include "top.html"; ?>    
+        <div class="top_manu"></div>
         </header>
     
         <!-- 메뉴 및 로고, 검색 -->
