--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>shop</title>
 <link rel="stylesheet" type="text/css" href="./bestproduct.css?v=7">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
-<link rel="stylesheet" type="text/css" href="./top.css?v=20">
+<link rel="stylesheet" type="text/css" href="./top.css?v=21">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
 
@@ -26,7 +26,7 @@
     
         <!-- 최상단 메뉴부분 -->
         <header class="top clear">
-        <div class="top_manu"></div>
+        <div class="top_menu"></div>
         </header>
     
         <!-- 메뉴 및 로고, 검색 -->
