--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
     
         <!-- 최상단 메뉴부분 -->
         <header class="top clear">
-        <div class="top_menu"></div>
+        <div class="top_menu">
+            <ul class="left_menu topmenu">
+                <li>즐겨찾기</li>
+                <li>입점신청</li>
+            </ul>
+            <ol class="right_menu topmenu">
+                <li>로그인</li>
+                <li>회원가입</li>
+                <li>고객센터</li>
+            </ol>
+        </div>
         </header>
     
         <!-- 메뉴 및 로고, 검색 -->
