--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>shop</title>
 <link rel="stylesheet" type="text/css" href="./bestproduct.css?v=16">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
-<link rel="stylesheet" type="text/css" href="./top.css?v=25">
+<link rel="stylesheet" type="text/css" href="./top.css?v=26">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
 
@@ -41,7 +41,11 @@
     
         <!-- 메뉴 및 로고, 검색 -->
         <nav class="nav clear">
-        <?php include "menu.html"; ?>    
+        <div>
+            <div class="logo"></div>
+            <div class="search"></div>
+            <div class="main_menu"></div>
+        </div> 
         </nav>
     
         <!-- 배너 -->
