--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- 메뉴 및 로고, 검색 -->
         <nav class="nav clear">
         <div class="nav_div">
-            <div class="logo"><img src="./image/logo.png"></div>
+            <div class="logo"></div>
             <div class="search"></div>
             <div class="main_menu"></div>
         </div> 
