--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>shop</title>
 <link rel="stylesheet" type="text/css" href="./bestproduct.css?v=27">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
-<link rel="stylesheet" type="text/css" href="./top.css?v=30">
+<link rel="stylesheet" type="text/css" href="./top.css?v=31">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
 
@@ -43,7 +43,12 @@
         <nav class="nav clear">
         <div class="nav_div">
             <div class="logo"></div>
-            <div class="search"></div>
+            <div class="search">
+                <span>
+                    <input type="text" placeholder="검색할 상품명을 입력해 주시길 바랍니다.">
+                    <button type="button">검색</button>
+                </span>
+            </div>
             <div class="main_menu"></div>
         </div> 
         </nav>
