--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>shop</title>
 <link rel="stylesheet" type="text/css" href="./bestproduct.css?v=32">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
-<link rel="stylesheet" type="text/css" href="./top.css?v=36">
+<link rel="stylesheet" type="text/css" href="./top.css?v=37">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
 
@@ -49,7 +49,20 @@
                     <button type="button">검색</button>
                 </span>
             </div>
-            <div class="main_menu"></div>
+            <div class="main_menu">
+                <ul>
+                    <li>카테고리</li>
+                    <li>로켓배송</li>
+                    <li>로켓프레시</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </div> 
         </nav>
     
