--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <ol>
                     <li>coopang (주)</li>
                     <li>대표자 : 홍길동   |   대표번호:02-123-4567   |   사업자번호:123-22-34567</li>
-                    <li>주소 : 서울특별시 종로구 종로3가 국일빌딩 5F   |   개인정보책임자 : 이순신</li>
+                    <li>주소 : 서울특별시 성북구 월곡2동 장월로1마길 5   |   개인정보책임자 : 이순신</li>
                     <li>Copyright(c) coopang (주) All rights reserved.</li>
                 </ol>
             </div>
