--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>shop</title>
-<link rel="stylesheet" type="text/css" href="./bestproduct.css?v=36">
+<link rel="stylesheet" type="text/css" href="./bestproduct.css?v=37">
 <link rel="stylesheet" type="text/css" href="./productIndex.css">
 <link rel="stylesheet" type="text/css" href="./top.css?v=40">
 <script src="./jquery.js"></script>
@@ -123,7 +123,7 @@
     
         <!-- 카피라이터 -->
         <footer class="footer clear">
-            <div>
+            <div class="footer_div">
                 <ol>
                     <li>coopang (주)</li>
                     <li>대표자 : 홍길동   |   대표번호:02-123-4567   |   사업자번호:123-22-34567</li>
