--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="./top.css?v=40">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
+<script src="./top.js"></script>
 
 </head>
 <body>
@@ -50,17 +51,7 @@
                 </span>
             </div>
             <div class="main_menu">
-                <ul>
-                    <li>카테고리</li>
-                    <li>로켓배송</li>
-                    <li>로켓프레시</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul id="main_ul">
                 </ul>
             </div>
         </div> 
