--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </main>
     
         <!-- 카피라이터 -->
-        <footer class="footer clear">
+        <footer class="footer clear" id="footer">
             <div class="footer_div">
                 <ol>
                     <li>coopang (주)</li>
