--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="./top.css?v=40">
 <script src="./jquery.js"></script>
 <script src="./vue.js"></script>
-<script src="./top.js?v=10"></script>
+<script src="./top.js?v=11"></script>
 
 </head>
 <body>
@@ -20,7 +20,7 @@
             <ul>
                 <li><img src="./image/topbanner1.jpg"></li>
                 <li><img src="./image/topbanner2.jpg"></li>
-                <li><span class="topbanner_closebtn">X</span></li>
+                <li><span class="topbanner_closebtn" onclick="closebtn();">X</span></li>
             </ul>
         </div>
     </section>
