--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
         <!-- 배너 -->
         <section class="banner clear">
-        <iframe src="banner.html" width="100%" height="65" frameborder="0" scrolling="no"></iframe>
+        <!--<iframe src="banner.html" width="100%" height="65" frameborder="0" scrolling="no"></iframe>-->
         </section>
     
         <!-- 상품리스트 -->
@@ -67,7 +67,29 @@
             <section class="mainoutline">
                 <!-- 신규상품 -->
                 <article>
-                <?php include "newproduct.html"; ?>  
+                    <h2>[New Product]</h2>
+                    <ul>
+                        <li>
+                            <label></label>
+                            <label>명품한우 1등급 한우 추석 세트</label>
+                            <label>균일가<em>95,800원</em></label>
+                        </li>
+                        <li>
+                            <label></label>
+                            <label>마이다이닝 - 횡성한우추석 선물세트 25% 할인!!</label>
+                            <label>균일가<em>70,000원</em></label>
+                        </li>
+                        <li>
+                            <label></label>
+                            <label>한우등심 1++등급 선물세트 총 100분께 45%할인!!</label>
+                            <label>균일가<em>70,000원</em></label>
+                        </li>
+                        <li>
+                            <label></label>
+                            <label>[OODLES] - 프리미엄 1++한우등급 선물세트</label>
+                            <label>균일가<em>88,000원</em></label>
+                        </li>
+                    </ul>
                 </article>
                 <!-- 인기상품 -->
                 <article>
