--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </nav>
     
         <!-- 배너 -->
-        <section class="banner clear">
+        <section class="banner">
         <!--<iframe src="banner.html" width="100%" height="65" frameborder="0" scrolling="no"></iframe>-->
         </section>
     
@@ -66,26 +66,26 @@
         <main class="main">
             <section class="mainoutline">
                 <!-- 신규상품 -->
-                <article>
+                <article class="newProduct_wrap">
                     <h2>[New Product]</h2>
-                    <ul>
+                    <ul class="newProduct_ul">
                         <li>
-                            <label></label>
+                            <label><img src="./product/product1.jpg"></label>
                             <label>명품한우 1등급 한우 추석 세트</label>
                             <label>균일가<em>95,800원</em></label>
                         </li>
                         <li>
-                            <label></label>
+                            <label><img src="./product/product2.jpg"></label>
                             <label>마이다이닝 - 횡성한우추석 선물세트 25% 할인!!</label>
                             <label>균일가<em>70,000원</em></label>
                         </li>
                         <li>
-                            <label></label>
+                            <label><img src="./product/product3.jpg"></label>
                             <label>한우등심 1++등급 선물세트 총 100분께 45%할인!!</label>
                             <label>균일가<em>70,000원</em></label>
                         </li>
                         <li>
-                            <label></label>
+                            <label><img src="./product/product4.jpg"></label>
                             <label>[OODLES] - 프리미엄 1++한우등급 선물세트</label>
                             <label>균일가<em>88,000원</em></label>
                         </li>
