--- a/index.html
+++ b/index.html
@@ -70,22 +70,22 @@
                     <h2>[New Product]</h2>
                     <ul class="newProduct_ul">
                         <li>
-                            <label><img src="./product/product1.jpg"></label>
+                            <label></label>
                             <label>명품한우 1등급 한우 추석 세트</label>
                             <label>균일가<em>95,800원</em></label>
                         </li>
                         <li>
-                            <label><img src="./product/product2.jpg"></label>
+                            <label></label>
                             <label>마이다이닝 - 횡성한우추석 선물세트 25% 할인!!</label>
                             <label>균일가<em>70,000원</em></label>
                         </li>
                         <li>
-                            <label><img src="./product/product3.jpg"></label>
+                            <label></label>
                             <label>한우등심 1++등급 선물세트 총 100분께 45%할인!!</label>
                             <label>균일가<em>70,000원</em></label>
                         </li>
                         <li>
-                            <label><img src="./product/product4.jpg"></label>
+                            <label></label>
                             <label>[OODLES] - 프리미엄 1++한우등급 선물세트</label>
                             <label>균일가<em>88,000원</em></label>
                         </li>
