--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <section class="mainoutline">
                 <!-- 신규상품 -->
                 <article class="newProduct_wrap">
-                    <h2>[New Product]</h2>
+                    <p>[New Product]</p>
                     <ul class="newProduct_ul">
                         <li>
                             <label></label>
