--- a/index.html
+++ b/index.html
@@ -66,30 +66,51 @@
         <main class="main">
             <section class="mainoutline">
                 <!-- 신규상품 -->
-                <article class="newProduct_wrap">
-                    <p>[New Product]</p>
-                    <ul class="newProduct_ul">
-                        <li>
-                            <label></label>
-                            <label>명품한우 1등급 한우 추석 세트</label>
-                            <label>균일가<em>95,800원</em></label>
-                        </li>
-                        <li>
-                            <label></label>
-                            <label>마이다이닝 - 횡성한우추석 선물세트 25% 할인!!</label>
-                            <label>균일가<em>70,000원</em></label>
-                        </li>
-                        <li>
-                            <label></label>
-                            <label>한우등심 1++등급 선물세트 총 100분께 45%할인!!</label>
-                            <label>균일가<em>70,000원</em></label>
-                        </li>
-                        <li>
-                            <label></label>
-                            <label>[OODLES] - 프리미엄 1++한우등급 선물세트</label>
-                            <label>균일가<em>88,000원</em></label>
-                        </li>
-                    </ul>
+                <dl class="product_dl">
+                    <dt>[New Product]</dt>
+                     <dd>
+                        <ol class="product_box">
+                            <li></li>
+                            <li>명품한우 1등급 한우 추석 세트</li>
+                            <li>
+                            <label class="text_yellow">균일가</label>
+                            <label class="text_black">95,800원</label>
+                            </li>       
+                       </ol>
+                     </dd>
+                    
+                     <dd>
+                        <ol class="product_box">
+                            <li></li>
+                            <li>마이다이닝 - 횡성한우 추석선물세트 25% 할인!!</li>
+                            <li>
+                            <label class="text_yellow">균일가</label>
+                            <label class="text_black">70,800원</label>
+                            </li>       
+                       </ol>
+                     </dd>
+                    
+                     <dd>
+                        <ol class="product_box">
+                            <li></li>
+                            <li>한우등심 1++등급 선물세트 총 100분께 45% 할인!!</li>
+                            <li>
+                            <label class="text_yellow">균일가</label>
+                            <label class="text_black">98,800원</label>
+                            </li>       
+                       </ol>
+                     </dd>    
+                     <dd>
+                        <ol class="product_box">
+                            <li></li>
+                            <li>[OODLES - 프리미엄] 1++ 한우등급 선물세트</li>
+                            <li>
+                            <label class="text_yellow">균일가</label>
+                            <label class="text_black">88,000원</label>
+                            </li>       
+                       </ol>
+                     </dd>                   
+                    </dl>
                 </article>
                 <!-- 인기상품 -->
                 <article>
