--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <main class="main">
             <section class="mainoutline">
                 <!-- 신규상품 -->
+                <p>[New Product]</p>
                 <dl class="product_dl">
-                    <dt>[New Product]</dt>
                      <dd>
                         <ol class="product_box">
                             <li></li>
