--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <main class="main">
             <section class="mainoutline">
                 <!-- 신규상품 -->
-                <p>[New Product]</p>
+                <p class="newProduct_nm">[New Product]</p>
                 <dl class="product_dl">
                      <dd>
                         <ol class="product_box">
