--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <main class="main">
             <section class="mainoutline">
                 <!-- 신규상품 -->
+                <article>
                 <p class="newProduct_nm">[New Product]</p>
                 <dl class="product_dl">
                      <dd>
@@ -78,7 +79,6 @@
                             </li>       
                        </ol>
                      </dd>
-                    
                      <dd>
                         <ol class="product_box">
                             <li></li>
@@ -109,8 +109,8 @@
                             <label class="text_black">88,000원</label>
                             </li>       
                        </ol>
-                     </dd>                   
-                    </dl>
+                     </dd>          
+                </dl>         
                 </article>
                 <!-- 인기상품 -->
                 <article>
