--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </nav>
     
         <!-- 배너 -->
-        <section class="banner">
+        <!--<section class="banner">-->
         <!--<iframe src="banner.html" width="100%" height="65" frameborder="0" scrolling="no"></iframe>-->
-        </section>
+        <!--</section>-->
     
         <!-- 상품리스트 -->
         <main class="main">
